@@ -45,7 +45,6 @@ Collate:
     'cutData.R'
     'date.breaks.R'
     'drawOpenKey.R'
-    'elimna.R'
     'GoogleMapsPlot.R'
     'import.2.R'
     'import.R'
@@ -65,24 +64,20 @@ Collate:
     'polarFreq.R'
     'polarPlot.R'
     'quickText.R'
-    'regboot.R'
-    'regci.R'
     'samp.boot.block.R'
     'scatterPlot.R'
     'selectRunning.R'
     'smoothTrend.R'
     'summaryPlot.R'
-    'tau.boot.R'
-    'tau.R'
     'TaylorDiagram.R'
     'timeAverage.R'
     'timePlot.R'
     'timeVariation.R'
     'trendLevel.R'
-    'tsp1reg.R'
     'utilities.R'
     'windRose.R'
     'zzz.R'
     'trajPlot.R'
     'importTraj.R'
     'getMeta.R'
+    'senTheil.R'
